# langchain-agent

./: README.md  agent-bot.py  agent-simple.py  agent.py  main.py  pyproject.toml  requirements.txt  research_agent-v2.py  research_agent.py
notebooks/: 01_Your_First_AI_Agent.ipynb  notebook-Ex-1.ipynb  notebook-Ex-2.ipynb  notebook-Ex-3.ipynb  notebook-Ex-4.ipynb
