[project]
name = "langchain-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "arxiv>=2.4.1",
    "ddg>=0.2.2",
    "ddgs>=9.11.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg-pool>=3.3.0",
    "psycopg[binary,pool]>=3.3.3",
    "tiktoken>=0.12.0",
    "wikipedia>=1.4.0",
]
